--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -29,6 +29,7 @@ jobs:
   deploy:
     needs: laravel-tests
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Deploy Pro
         uses: fjogeleit/http-request-action@v1
